--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,6 +21,8 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    background-color: #181a1b;
+    color: #f5f5f5;
 }
 
 a {
@@ -169,4 +171,27 @@ button:hover,
     min-height: 100vh;
     min-width: 100vw;
     z-index: 0;
+}
+
+.train-marker div {
+    background: #464b4f;
+    border: 2px solid #f5f5f5;
+    border-radius: 40%;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 5px #000;
+}
+.train-marker img {
+    width: 20px;
+    height: 20px;
+}
+
+.leaflet-layer,
+.leaflet-control-zoom-in,
+.leaflet-control-zoom-out,
+.leaflet-control-attribution {
+    filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
 }/*# sourceMappingURL=style.css.map */
