--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,8 +5,8 @@ $font-weight: 500;
 
 $light-grey: #d8d8d8;
 $dark-grey: #616161;
-$primary-text-color: #212121;
-$secondary-text-color: #434343;
+$primary-text-color: #f5f5f5;
+$secondary-text-color: #ccc;
 $black: #000;
 $white: #fff;
 $border-grey: #808080;
@@ -19,6 +19,11 @@ $accent-color6: rgb(46 53 58 / 16%);
 
 $error-color: rgb(201 2 2);
 $link-color: $accent-color2;
+
+$bg-color: #181a1b;
+$bg-color2: #464b4f;
+$bg-color3: #323232;
+$bg-color4: #434343;
 
 * {
     margin: 0;
@@ -42,6 +47,8 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    background-color: $bg-color;
+    color: $primary-text-color;
 }
 
 a {
@@ -195,6 +202,32 @@ button,
     min-height: 100vh;
     min-width: 100vw;
     z-index: 0;
+}
+
+.train-marker {
+    div {
+        background: $bg-color2;
+        border: 2px solid $primary-text-color;
+        border-radius: 40%;
+        width: 28px;
+        height: 28px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 0 5px $black;
+    }
+
+    img {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+.leaflet-layer,
+.leaflet-control-zoom-in,
+.leaflet-control-zoom-out,
+.leaflet-control-attribution {
+  filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
 }
 
 @media (width <= 600px) {
