--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,12 +21,12 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #181a1b;
+    background-color: #131314;
     color: #f5f5f5;
 }
 
 a {
-    color: #377abd;
+    color: #496276;
 }
 
 h1 {
@@ -95,16 +95,26 @@ router-outlet > * {
     flex-direction: column;
 }
 
-navigation-outlet a {
+.nav-links {
+    gap: 25%;
+}
+
+.nav-links a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 0.5rem;
-    color: #fff;
-    font-weight: 600;
+    color: #ccc;
     text-decoration: none;
+}
+
+.nav-links img {
+    width: 1.5rem;
 }
 
 navigation-outlet {
     z-index: 1;
-    background-color: #464b4f;
+    background-color: #1a2122;
     padding: 0.5rem 0;
 }
 navigation-outlet a:hover {
@@ -120,7 +130,7 @@ navigation-outlet nav {
 }
 
 .flashmessage {
-    color: rgb(201, 2, 2);
+    color: rgb(230, 87, 87);
     padding: 0.5rem;
 }
 
@@ -133,12 +143,11 @@ button,
     font-size: 1.2rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    background-color: #43678a;
+    background-color: #00363e;
 }
 button:hover,
 .button:hover {
     cursor: pointer;
-    background-color: #37434f;
 }
 
 .right {
@@ -156,37 +165,39 @@ button:hover,
     }
 }
 .slide-in {
-    animation: move-from-right 0.4s ease both;
+    animation: move-from-bottom 0.4s ease both;
 }
 
 .slide-out {
-    animation: move-to-right 0.4s ease both;
+    animation: move-to-bottom 0.4s ease both;
 }
 
 .map {
     position: fixed;
     left: 0;
     height: 100vh;
-    width: 100vw;
-    min-height: 100vh;
-    min-width: 100vw;
+    width: 100%;
     z-index: 0;
 }
 
 .train-marker div {
-    background: #464b4f;
+    background: #1a2122;
     border: 2px solid #f5f5f5;
     border-radius: 40%;
-    width: 28px;
-    height: 28px;
+    width: 1.5rem;
+    height: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 0 0 5px #000;
 }
 .train-marker img {
-    width: 20px;
-    height: 20px;
+    width: 1.125em;
+    height: 1.125rem;
+}
+
+.delayed div {
+    background: #B20D0D;
 }
 
 .leaflet-layer,
@@ -194,4 +205,30 @@ button:hover,
 .leaflet-control-zoom-out,
 .leaflet-control-attribution {
     filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+}
+
+.popup-div {
+    position: fixed;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 800px;
+    min-height: 150px;
+    background: #131314;
+    color: #f5f5f5;
+    border-radius: 1rem 1rem 0 0;
+    padding: 1rem;
+    z-index: 2;
+    display: none;
+}
+
+.popup-div .close {
+    background-color: #303030;
+    width: 2rem;
+    height: 2rem;
+    padding: 0;
+    border-radius: 50%;
+    float: right;
+    font-size: 1.6rem;
 }/*# sourceMappingURL=style.css.map */
