--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,32 +1,33 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
+  font-size: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 body {
-    line-height: 1.4;
-    font-family: "Inter", sans-serif;
-    font-weight: 500;
-    padding-top: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #131314;
-    color: #f5f5f5;
+  line-height: 1.4;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  padding-top: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #131314;
+  color: #f5f5f5;
 }
 
 a {
-    color: #9fefff;
+  color: #9fefff;
 }
 
 h1,
@@ -34,269 +35,284 @@ h2,
 h3,
 p,
 ul {
-    margin: 0;
-    padding-bottom: 0.5rem;
+  margin: 0;
+  padding-bottom: 0.5rem;
 }
 
 ul {
-    list-style: none;
-    color: #f5f5f5;
+  list-style: none;
+  color: #f5f5f5;
 }
 
 button,
 .button {
-    display: inline-block;
-    color: #f5f5f5;
-    background-color: #00363e;
-    text-decoration: none;
-    border: 0;
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
-    border-radius: 3rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  display: inline-block;
+  color: #f5f5f5;
+  background-color: #00363e;
+  text-decoration: none;
+  border: 0;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 3rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
+
 button img,
 .button img {
-    width: 1.5rem;
-    height: 1.5rem;
-    vertical-align: middle;
+  width: 1.5rem;
+  height: 1.5rem;
+  vertical-align: middle;
 }
+
 button:hover,
 .button:hover {
-    cursor: pointer;
-    background-color: rgb(0, 36, 41);
+  cursor: pointer;
+  background-color: rgb(0, 36, 41);
 }
 
 .bg-red {
-    background-color: rgb(114, 36, 36);
+  background-color: rgb(114, 36, 36);
 }
+
 .bg-red:hover {
-    background-color: rgb(88, 28, 28);
+  background-color: rgb(88, 28, 28);
 }
 
 .btn-big {
-    width: 100%;
-    font-size: 1.125rem;
-    padding: 0.75rem 1.5rem;
+  width: 100%;
+  font-size: 1.125rem;
+  padding: 0.75rem 1.5rem;
 }
 
 label,
 input,
 textarea,
 select {
-    display: block;
-    font-size: 1.125rem;
+  display: block;
+  font-size: 1.125rem;
 }
 
 input,
 textarea,
 select {
-    background-color: #1a2122;
-    color: #f5f5f5;
-    margin-bottom: 1rem;
-    padding: 1rem;
-    border: #303030 1px solid;
-    border-radius: 5px;
-    width: 100%;
+  background-color: #1a2122;
+  color: #f5f5f5;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border: #303030 1px solid;
+  border-radius: 5px;
+  width: 100%;
 }
 
 form {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .container {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .container h1 {
-    text-align: center;
+  text-align: center;
 }
 
 .route-container {
-    max-width: 600px;
-    margin: 0 auto;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 router-outlet {
-    display: flex;
-    flex: 1;
-    overflow-y: auto;
-    width: 100%;
-    margin: 0 auto;
+  display: flex;
+  flex: 1;
+  overflow-y: auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 router-outlet > * {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav-links {
-    gap: 25%;
+  gap: 25%;
 }
 
 .nav-links a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem;
-    color: #ccc;
-    text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
+  color: #ccc;
+  text-decoration: none;
 }
 
 .nav-links img {
-    width: 1.5rem;
+  width: 1.5rem;
 }
 
 navigation-outlet {
-    z-index: 1;
-    background-color: #1a2122;
+  z-index: 1;
+  background-color: #1a2122;
 }
+
 navigation-outlet a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
+
 navigation-outlet nav {
-    padding-bottom: 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .flashmessage {
-    color: rgb(230, 87, 87);
-    padding: 0.5rem;
+  color: rgb(230, 87, 87);
+  padding: 0.5rem;
 }
 
 .right {
-    float: right;
+  float: right;
 }
 
 @keyframes move-from-right {
-    from {
-        transform: translateX(100%);
-    }
+  from {
+    transform: translateX(100%);
+  }
 }
 @keyframes move-to-right {
-    to {
-        transform: translateX(100%);
-    }
+  to {
+    transform: translateX(100%);
+  }
 }
+
 .slide-in {
-    animation: move-from-bottom 0.4s ease both;
+  animation: move-from-bottom 0.4s ease both;
 }
 
 .slide-out {
-    animation: move-to-bottom 0.4s ease both;
+  animation: move-to-bottom 0.4s ease both;
 }
 
 .map {
-    position: fixed;
-    left: 0;
-    height: 100vh;
-    width: 100%;
-    z-index: 0;
+  position: fixed;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 0;
 }
 
 .train-marker {
-    margin: 0 !important;
-    margin-top: -0.75rem !important;
-    margin-left: -0.75rem !important;
+  margin: 0 !important;
+  margin-top: -0.75rem !important;
+  margin-left: -0.75rem !important;
 }
+
 .train-marker div {
-    padding: 0;
-    background: #1a2122;
-    border: 2px solid #f5f5f5;
-    border-radius: 40%;
-    width: 1.5rem;
-    height: 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 0 5px #000;
+  padding: 0;
+  background: #1a2122;
+  border: 2px solid #f5f5f5;
+  border-radius: 40%;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 5px #000;
 }
+
 .train-marker img {
-    width: 1.125em;
-    height: 1.125rem;
+  width: 1.125em;
+  height: 1.125rem;
 }
 
 .delayed div {
-    background: #b20d0d;
+  background: #b20d0d;
 }
 
 .leaflet-layer,
 .leaflet-control-zoom-in,
 .leaflet-control-zoom-out,
 .leaflet-control-attribution {
-    filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+  filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
 }
 
 .popup-div {
-    position: fixed;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 100%;
-    max-width: 600px;
-    min-height: 150px;
-    background: #131314;
-    color: #f5f5f5;
-    border-radius: 1rem 1rem 0 0;
-    padding: 1rem;
-    z-index: 2;
-    display: none;
+  position: fixed;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 600px;
+  min-height: 150px;
+  background: #131314;
+  color: #f5f5f5;
+  border-radius: 1rem 1rem 0 0;
+  padding: 1rem;
+  z-index: 2;
+  display: none;
 }
+
 .popup-div div {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
+
 .popup-div div:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
-.popup-div h2, .popup-div h3 {
-    padding: 0;
+
+.popup-div h2,
+.popup-div h3 {
+  padding: 0;
 }
+
 .popup-div p {
-    color: #ccc;
-    padding: 0;
+  color: #ccc;
+  padding: 0;
 }
 
 .popup-div .close {
-    background-color: #303030;
-    color: #f5f5f5;
-    width: 2rem;
-    height: 2rem;
-    padding: 0;
-    border-radius: 50%;
-    float: right;
-    font-size: 1.6rem;
+  background-color: #303030;
+  color: #f5f5f5;
+  width: 2rem;
+  height: 2rem;
+  padding: 0;
+  border-radius: 50%;
+  float: right;
+  font-size: 1.6rem;
 }
 
 .saved-stations {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .station {
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    border-bottom: 2px solid #303030;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  border-bottom: 2px solid #303030;
 }
 
 .station .train-marker {
-    margin: 0 !important;
+  margin: 0 !important;
 }
 
 .station-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+
 .station-info h3 {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
+
 .station-info span {
-    color: #ccc;
-}/*# sourceMappingURL=style.css.map */
+  color: #ccc;
+}
