--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-$font-family: "Inter", sans-serif;
+$font-family: 'Inter', sans-serif;
 $font-weight: 500;
 
 $primary-text-color: #f5f5f5;
@@ -12,7 +12,7 @@ $white: #fff;
 $accent-light: #58b9ca;
 $accent: #496276;
 $accent-dark: #00363e;
-$accent-darker:rgb(0, 36, 41);
+$accent-darker: rgb(0, 36, 41);
 
 $bg-color: #131314;
 $bg-color2: #1a2122;
@@ -27,33 +27,33 @@ $border-color: $bg-color3;
 
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
+  font-size: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 body {
-    line-height: 1.4;
-    font-family: $font-family;
-    font-weight: $font-weight;
-    padding-top: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: $bg-color;
-    color: $primary-text-color;
+  line-height: 1.4;
+  font-family: $font-family;
+  font-weight: $font-weight;
+  padding-top: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: $bg-color;
+  color: $primary-text-color;
 }
 
 a {
-    color: $link-color;
+  color: $link-color;
 }
 
 h1,
@@ -61,285 +61,287 @@ h2,
 h3,
 p,
 ul {
-    margin: 0;
-    padding-bottom: 0.5rem;
+  margin: 0;
+  padding-bottom: 0.5rem;
 }
 
 ul {
-    list-style: none;
-    color: $primary-text-color;
+  list-style: none;
+  color: $primary-text-color;
 }
 
 button,
 .button {
-    display: inline-block;
-    color: $primary-text-color;
-    background-color: $accent-dark;
-    text-decoration: none;
-    border: 0;
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
-    border-radius: 3rem;
+  display: inline-block;
+  color: $primary-text-color;
+  background-color: $accent-dark;
+  text-decoration: none;
+  border: 0;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 3rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  img {
+    width: 1.5rem;
+    height: 1.5rem;
+    vertical-align: middle;
+  }
+
+  &:hover {
     cursor: pointer;
-    transition: background-color 0.3s ease;
-
-    img {
-        width: 1.5rem;
-        height: 1.5rem;
-        vertical-align: middle;
-    }
-
-    &:hover {
-        cursor: pointer;
-        background-color: $accent-darker;
-    }
+    background-color: $accent-darker;
+  }
 }
 
 .bg-red {
-    background-color: $bg-red;
+  background-color: $bg-red;
 
-    &:hover {
-        background-color: $bg-red2;
-    }
+  &:hover {
+    background-color: $bg-red2;
+  }
 }
 
 .btn-big {
-    width: 100%;
-    font-size: 1.125rem;
-    padding: 0.75rem 1.5rem;
+  width: 100%;
+  font-size: 1.125rem;
+  padding: 0.75rem 1.5rem;
 }
 
 label,
 input,
 textarea,
 select {
-    display: block;
-    font-size: 1.125rem;
+  display: block;
+  font-size: 1.125rem;
 }
 
 input,
 textarea,
 select {
-    background-color: $bg-color2;
-    color: $primary-text-color;
-    margin-bottom: 1rem;
-    padding: 1rem;
-    border: $border-color 1px solid;
-    border-radius: 5px;
-    width: 100%;
+  background-color: $bg-color2;
+  color: $primary-text-color;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border: $border-color 1px solid;
+  border-radius: 5px;
+  width: 100%;
 }
 
 form {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .container {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .container h1 {
-    text-align: center;
+  text-align: center;
 }
 
 .route-container {
-    max-width: 600px;
-    margin: 0 auto;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 router-outlet {
-    display: flex;
-    flex: 1;
-    overflow-y: auto;
-    width: 100%;
-    margin: 0 auto;
+  display: flex;
+  flex: 1;
+  overflow-y: auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 router-outlet > * {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav-links {
-    gap: 25%;
+  gap: 25%;
 }
 
 .nav-links a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem;
-    color: $secondary-text-color;
-    text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
+  color: $secondary-text-color;
+  text-decoration: none;
 }
 
 .nav-links img {
-    width: 1.5rem;
+  width: 1.5rem;
 }
 
 navigation-outlet {
-    z-index: 1;
-    background-color: $bg-color2;
+  z-index: 1;
+  background-color: $bg-color2;
 
-    a:hover {
-        text-decoration: underline;
-    }
+  a:hover {
+    text-decoration: underline;
+  }
 
-    nav {
-        padding-bottom: 1rem;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-    }
+  nav {
+    padding-bottom: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
 }
 
 .flashmessage {
-    color: $error-color;
-    padding: 0.5rem;
+  color: $error-color;
+  padding: 0.5rem;
 }
 
 .right {
-    float: right;
+  float: right;
 }
 
 @keyframes move-from-right {
-    from {
-        transform: translateX(100%);
-    }
+  from {
+    transform: translateX(100%);
+  }
 }
 
 @keyframes move-to-right {
-    to {
-        transform: translateX(100%);
-    }
+  to {
+    transform: translateX(100%);
+  }
 }
 
 .slide-in {
-    animation: move-from-bottom 0.4s ease both;
+  animation: move-from-bottom 0.4s ease both;
 }
 
 .slide-out {
-    animation: move-to-bottom 0.4s ease both;
+  animation: move-to-bottom 0.4s ease both;
 }
 
 .map {
-    position: fixed;
-    left: 0;
-    height: 100vh;
-    width: 100%;
-    z-index: 0;
+  position: fixed;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 0;
 }
 
 
 
 .train-marker {
-    margin: 0 !important;
-    margin-top: -0.75rem !important;
-    margin-left: -0.75rem !important;
-    div {
-        padding: 0;
-        background: $bg-color2;
-        border: 2px solid $primary-text-color;
-        border-radius: 40%;
-        width: 1.5rem;
-        height: 1.5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 0 0 5px $black;
-    }
+  margin: 0 !important;
+  margin-top: -0.75rem !important;
+  margin-left: -0.75rem !important;
 
-    img {
-        width: 1.125em;
-        height: 1.125rem;
-    }
+  div {
+    padding: 0;
+    background: $bg-color2;
+    border: 2px solid $primary-text-color;
+    border-radius: 40%;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 5px $black;
+  }
+
+  img {
+    width: 1.125em;
+    height: 1.125rem;
+  }
 }
 
 .delayed {
-    div {
-        background: $red-color;
-    }
+  div {
+    background: $red-color;
+  }
 }
 
 .leaflet-layer,
 .leaflet-control-zoom-in,
 .leaflet-control-zoom-out,
 .leaflet-control-attribution {
-    filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+  filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
 }
 
 .popup-div {
-    position: fixed;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 100%;
-    max-width: 600px;
-    min-height: 150px;
-    background: $bg-color;
-    color: $primary-text-color;
-    border-radius: 1rem 1rem 0 0;
-    padding: 1rem;
-    z-index: 2;
-    display: none;
+  position: fixed;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 600px;
+  min-height: 150px;
+  background: $bg-color;
+  color: $primary-text-color;
+  border-radius: 1rem 1rem 0 0;
+  padding: 1rem;
+  z-index: 2;
+  display: none;
 
-    div {
-        margin-bottom: 1rem;
-    }
+  div {
+    margin-bottom: 1rem;
+  }
 
-    div:last-child {
-        margin-bottom: 0;
-    }
+  div:last-child {
+    margin-bottom: 0;
+  }
 
-    h2, h3 {
-        padding: 0;
-    }
+  h2,
+  h3 {
+    padding: 0;
+  }
 
-    p {
-        color: $secondary-text-color;
-        padding: 0;
-    }
+  p {
+    color: $secondary-text-color;
+    padding: 0;
+  }
 }
 
 .popup-div .close {
-    background-color: $bg-color3;
-    color: $primary-text-color;
-    width: 2rem;
-    height: 2rem;
-    padding: 0;
-    border-radius: 50%;
-    float: right;
-    font-size: 1.6rem;
+  background-color: $bg-color3;
+  color: $primary-text-color;
+  width: 2rem;
+  height: 2rem;
+  padding: 0;
+  border-radius: 50%;
+  float: right;
+  font-size: 1.6rem;
 }
 
 .saved-stations {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .station {
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    border-bottom: 2px solid $border-color;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  border-bottom: 2px solid $border-color;
 }
 
 .station .train-marker {
-    margin: 0 !important;
+  margin: 0 !important;
 }
 
 .station-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-    h3 {
-        padding-bottom: 0;
-    }
+  h3 {
+    padding-bottom: 0;
+  }
 
-    span {
-        color: $secondary-text-color;
-    }
+  span {
+    color: $secondary-text-color;
+  }
 }
