--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-$font-family: 'Inter', sans-serif;
+$font-family: "Inter", sans-serif;
 $font-weight: 500;
 
 $primary-text-color: #f5f5f5;
@@ -24,7 +24,6 @@ $bg-red2: rgb(88, 28, 28);
 $error-color: rgb(230, 87, 87);
 $link-color: $accent-text-color;
 $border-color: $bg-color3;
-
 
 * {
   margin: 0;
@@ -231,8 +230,6 @@ navigation-outlet {
   width: 100%;
   z-index: 0;
 }
-
-
 
 .train-marker {
   margin: 0 !important;
